objects/AutoRABIT__c.object
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Use this picklist to select case type</description>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deployments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EZ-Commits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SyncSFOrgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ci Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Customer enters first name</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Customer enters last name</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Enter phone number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>AutoRABIT Case</label>
    <nameField>
        <label>AutoRABIT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoRABIT Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>